<resources>
    <string name="app_name">GoStick_test</string>

    <string name="my_account">My Account</string>
    <string name="reservations">Reservations</string>
    <string name="rate">Rate</string>
    <string name="contact_us">Contact Us</string>
    <string name="language">Language</string>

    <string name="log_out">Log Out</string>
    <string name="change_password">Change Password</string>
    <string name="user_name">User Name</string>
    <string name="email_address">E-mail Address</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="phone_number">Phone Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="free_rooms">Free Rooms</string>
    <string name="play_station_name">Play Station Name</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="string_language_english">English</string>
    <string name="string_language_arabic">عربى</string>
    <string name="already_have_account_login">already have account?login</string>
    <string name="playstation_address">Playstation Address</string>
    <string name="reserve">Reserve</string>
    <string name="available_games">Available Games</string>
    <string name="available_services">Available Services</string>
    <string name="reserved_successfully">Reserved Successfully</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="number_of_hours">Number Of Hours</string>
    <string name="start_reservation">Start Reservation</string>
    <string name="end_reservation">End Reservation</string>
    <string name="delete_reservation">Delete Reservation</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="open">Open</string>
    <string name="promo_code">Promo Code</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="sittings">Sittings</string>
    <string name="search">Search</string>
    <string name="open1">Open</string>
    <string name="time">Time</string>
    <string name="check_promo">Check Promo</string>

</resources>
