<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/rate" />
        <item
            android:id="@+id/nav_reservations"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/reservations" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/contact_us" />
    </group>

    <item android:title="@string/sittings">
        <menu>
            <item
                android:id="@+id/nav_language"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/language" />
        </menu>
    </item>

</menu>
