<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
            android:id="@+id/txt_sign_up_signup"
            style="@style/btn_log_in_login"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginRight="36dp"
            android:layout_marginEnd="36dp" android:layout_marginLeft="36dp" android:layout_marginStart="36dp"
            android:layout_width="0dp" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/card_sign_up_password"
            app:layout_constraintHorizontal_bias="1.0"
        android:enabled="false"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_sign_up_email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_bias="0.461"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/card_sign_up_user_name">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_sign_up_email"
            android:hint="@string/email_address"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_sign_up_phone_number"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_sign_up_email_address"
        app:layout_constraintHorizontal_bias="0.461" android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
       >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:id="@+id/edt_sign_up_phone"
            android:hint="@string/phone_number" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/card_sign_up_age"
        app:layout_constraintTop_toBottomOf="@+id/card_sign_up_phone_number">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:id="@+id/edt_sign_up_age"
            android:hint="@string/age" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/card_sign_up_password"
        app:layout_constraintTop_toBottomOf="@+id/card_sign_up_age">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:id="@+id/edt_sign_up_password" android:hint="@string/password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/card_sign_up_user_name"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/img_sign_up_logo">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:id="@+id/edt_sign_up_user_name"
            android:hint="@string/user_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
            android:src="@drawable/draw_splash_screen_logo"
            android:layout_width="132dp"
            android:layout_height="88dp"
            android:id="@+id/img_sign_up_logo"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/progressBar2" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/card_sign_up_password" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/already_have_account_login"
            android:layout_width="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_sign_up_sign_in" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_sign_up_signup" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>