<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
    <TextView
            android:text="@string/play_station_name"
            android:layout_width="wrap_content"
            android:gravity="center"

            android:layout_height="wrap_content"
            android:background="@drawable/draw_playstation_name"
            android:id="@+id/txt_playstation_name"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            android:textColor="@android:color/black" android:textSize="20sp" android:padding="8dp"/>
    <TextView
            android:text="@string/free_rooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_playstation_name" android:layout_marginTop="24dp"
            android:id="@+id/textView11"/>
    <TextView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@id/textView11"
            android:background="@drawable/draw_circle"
            android:id="@+id/txt_free" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_playstation_name" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            android:layout_marginStart="24dp" app:layout_constraintHorizontal_bias="0.134"/>
    <TextView
            android:text="@string/from"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="36dp" app:layout_constraintTop_toBottomOf="@+id/txt_free"
            android:layout_marginTop="36dp"/>
    <TextView
            android:layout_width="40dp"
            android:gravity="center"
app:layout_constraintBaseline_toBaselineOf="@id/textView7"
            android:background="@drawable/draw_circle"
            android:layout_height="40dp"
            android:id="@+id/txt_from"  android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView7" app:layout_constraintTop_toBottomOf="@+id/txt_free"
            android:layout_marginTop="36dp"/>
    <TextView
            android:text="@string/to"
            android:layout_width="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            app:layout_constraintEnd_toStartOf="@+id/txt_to" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_free"
            android:layout_marginTop="36dp"/>
    <TextView
            android:layout_width="40dp"
            android:background="@drawable/draw_circle"
            android:layout_height="40dp"
            android:gravity="center"
app:layout_constraintBaseline_toBaselineOf="@id/textView9"
            android:id="@+id/txt_to"
            android:layout_marginEnd="36dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_free"/>
    <TextView
            android:text="@string/number_of_hours"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"/>
    <TextView
            android:background="@drawable/draw_circle"
            android:layout_width="40dp"
            android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@id/textView12"
            android:layout_height="40dp"
            android:id="@+id/txt_number_of_hours" app:layout_constraintStart_toEndOf="@+id/textView12"
       android:layout_marginStart="16dp" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"/>
    <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/btn_hours_up"
        app:layout_constraintStart_toEndOf="@+id/txt_number_of_hours"
           android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"/>
    <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/btn_hours_down" app:layout_constraintStart_toEndOf="@+id/txt_number_of_hours"
           android:layout_marginStart="16dp" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"/>
    <Button
            android:text="@string/open"
        android:background="@drawable/open_button"
        android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_open" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="text"
            android:gravity="center"

            android:ems="10"
            android:id="@+id/edt_promo_code"
            android:hint="@string/promo_code" android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_hours_down" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp" tools:ignore="Autofill"
            android:background="@color/white" android:textColor="@android:color/black"
    />
    <Button
            android:text="@string/confirm"
            android:background="@drawable/btn_reserve"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_confirm" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/edt_promo_code" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.06"/>
    <Button
            android:text="@string/check_promo"
        android:background="@drawable/btn_reserve"
        android:textColor="@color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCheckPromo"
            app:layout_constraintBaseline_toBaselineOf="@+id/edt_promo_code" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" />

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirm"
        app:layout_constraintEnd_toStartOf="@+id/btnCheckPromo"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>