<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorPrimaryDark">


    <TextView
            android:text="@string/reserved_successfully"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:id="@+id/cardView4">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/end_time"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />
            <TextView
                    android:text="@string/start_time"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>
            <TextView
                    android:text="@string/number_of_hours"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>
            <TextView
                    android:text="@string/play_station_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:textColor="@android:color/black"/>
            <TextView
                    android:id="@+id/txt_playstation_name"
                    android:gravity="center"
                    android:hint="@string/play_station_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                     android:layout_marginStart="24dp"
                    app:layout_constraintStart_toEndOf="@+id/textView10"/>
            <TextView
                    android:id="@+id/txt_number_of_hours"
                    android:hint="@string/number_of_hours"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_playstation_name"
                    android:layout_marginStart="24dp" app:layout_constraintStart_toEndOf="@+id/textView8"/>
            <TextView
                    android:id="@+id/txt_start_time"
                    android:hint="@string/start_time"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_number_of_hours"
                    android:layout_marginStart="24dp" app:layout_constraintStart_toEndOf="@+id/textView6"/>
            <TextView
                    android:id="@+id/txt_end_time"
                    android:hint="@string/end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/txt_start_time"
                    android:layout_marginStart="24dp" app:layout_constraintStart_toEndOf="@+id/textView2"/>

            <TextView
                android:id="@+id/txt_after_reservation_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_end_time" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <Button
            android:id="@+id/btn_start_reservation"
            android:text="@string/start_reservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_end_reservation" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/draw_start_reservation"
            android:textColor="@color/white"/>
    <Button
            android:id="@+id/btn_end_reservation"
            android:text="@string/end_reservation"
            android:layout_width="wrap_content"
        android:enabled="false"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
            android:background="@drawable/draw_change_password_background"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
             android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/btn_start_reservation" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <Button
            android:id="@+id/btn_delete_reservation"
            android:text="@string/delete_reservation"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/draw_delete_reservation"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_start_reservation"/>

</androidx.constraintlayout.widget.ConstraintLayout>